# rust-crate-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  cargo-generate.toml  cliff.toml  cliff.toml.liquid  codecov.yml  deny.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  dependabot-automerge.yml.liquid  template-test.yml
LICENSES/: MIT.txt
src/: lib.rs
