# SPDX-FileCopyrightText: 2025 {{author_name}} <{{author_email}}>
#
# SPDX-License-Identifier: MIT

[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["{{author_name}} <{{author_email}}>"]
description = "{{description}}"
documentation = "https://docs.rs/{{project-name}}"
readme = "README.md"
homepage = "https://github.com/{{gh_username}}/{{project-name}}"
repository = "https://github.com/{{gh_username}}/{{project-name}}"
license = "MIT"
keywords = []
categories = []
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "CHANGELOG.md"]

[lib]
name = "{{crate_name}}"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
